@@ -29,11 +29,8 @@ CMAKE_OPTS := \
 	-D PEDANTIC=TRUE \
 	-D WITH_SPATIALITE=TRUE \
 	-D WITH_MAPSERVER=TRUE \
-	-D QGIS_CGIBIN_SUBDIR=/usr/lib/cgi-bin
-
-ifneq (,$(findstring $(DISTRIBUTION),"sid"))
-	CMAKE_OPTS += -D WITH_APIDOC=TRUE
-endif
+	-D QGIS_CGIBIN_SUBDIR=/usr/lib/cgi-bin \
+	-D WITH_APIDOC=TRUE
 
 ifneq (,$(findstring $(DISTRIBUTION),"natty"))
 	CMAKE_OPTS += -D QT_QTWEBKIT_INCLUDE_DIR=/usr/include/QtWebKit
